# cat-only-uploads

backend/: Cat.py  main.py  pyproject.toml
cat-recognition-service/: .gitignore  helper stuff  main.py  pyproject.toml  requirements.txt
frontend/app/: page.tsx
